Added binding for PromptControl.CopyCommand fixed ViewMetadataProperties.RawMetadata not being notified

--- a/SD_EXIF_Editor_v2/Views/ViewMetadataView.axaml
+++ b/SD_EXIF_Editor_v2/Views/ViewMetadataView.axaml
@@ -112,10 +112,12 @@
 										<c:PromptControl DockPanel.Dock="Top"
 														 Title="Prompt"
 														 Prompt="{Binding Prompt}"
+														 CopyCommand="{Binding CopyToClipboardCommand}"
 														 Margin="0 4"/>
 										<c:PromptControl DockPanel.Dock="Top"
 														 Title="Negative prompt"
 														 Prompt="{Binding NegativePrompt}"
+														 CopyCommand="{Binding CopyToClipboardCommand}"
 														 Margin="0 4"/>
 										<Separator DockPanel.Dock="Top"/>
 										<HeaderedContentControl DockPanel.Dock="Top"
