implemented placeholders for PromptControl

--- a/SD_EXIF_Editor_v2/Controls/PromptControl.axaml
+++ b/SD_EXIF_Editor_v2/Controls/PromptControl.axaml
@@ -5,16 +5,16 @@
 			 xmlns:c="using:SD_EXIF_Editor_v2.Controls"
              mc:Ignorable="d" d:DesignWidth="300" d:DesignHeight="150"
              x:Class="SD_EXIF_Editor_v2.Controls.PromptControl"
-			 x:Name="PromptCtrl">
-	<HeaderedContentControl>
+			 x:DataType="c:PromptControl">
+	<HeaderedContentControl IsVisible="{Binding ShouldDisplayControl, RelativeSource={RelativeSource AncestorType=c:PromptControl}}">
 		<HeaderedContentControl.Header>
 			<DockPanel>
-				<TextBlock Text="{Binding Title, ElementName=PromptCtrl}"
+				<TextBlock Text="{Binding Title, RelativeSource={RelativeSource AncestorType=c:PromptControl}}"
 						   FontWeight="Bold"
 						   FontSize="18"
 						   DockPanel.Dock="Left"/>
-				<c:ButtonWithTempContent Command="{Binding CopyCommand, ElementName=PromptCtrl}"
-										 CommandParameter="{Binding Prompt, ElementName=PromptCtrl}"
+				<c:ButtonWithTempContent Command="{Binding CopyCommand, RelativeSource={RelativeSource AncestorType=c:PromptControl}}"
+										 CommandParameter="{Binding Prompt, RelativeSource={RelativeSource AncestorType=c:PromptControl}}"
 										 Theme="{DynamicResource BorderlessButton}"
 										 DockPanel.Dock="Right"
 										 VerticalAlignment="Center"
@@ -32,8 +32,16 @@
 				</c:ButtonWithTempContent>
 			</DockPanel>
 		</HeaderedContentControl.Header>
-		<TextBlock Text="{Binding Prompt, ElementName=PromptCtrl}"
-				   TextWrapping="WrapWithOverflow"
-				   Classes="Secondary"/>
+		<StackPanel>
+			<TextBlock Text="{Binding Prompt, RelativeSource={RelativeSource AncestorType=c:PromptControl}}"
+					   TextWrapping="WrapWithOverflow"
+					   IsVisible="{Binding !ShouldDisplayPlaceholder, RelativeSource={RelativeSource AncestorType=c:PromptControl}}"
+					   Classes="Secondary"/>
+			<TextBlock Text="No prompt available"
+					   IsVisible="{Binding ShouldDisplayPlaceholder, RelativeSource={RelativeSource AncestorType=c:PromptControl}}"
+					   FontStyle="Italic"
+				       TextWrapping="WrapWithOverflow"
+				       Classes="Secondary"/>
+		</StackPanel>
 	</HeaderedContentControl>
 </UserControl>
