Implemented Separator hiding when no PromptControls visible

--- a/SD_EXIF_Editor_v2/Views/ViewMetadataView.axaml
+++ b/SD_EXIF_Editor_v2/Views/ViewMetadataView.axaml
@@ -121,7 +121,19 @@
 														 CopyCommand="{Binding CopyToClipboardCommand}"
 														 Margin="0 4"
 														 DisplayPlaceholder="{Binding ShouldDisplayPlaceholders}"/>
-										<Separator DockPanel.Dock="Top"/>
+										<Separator DockPanel.Dock="Top">
+											<Separator.IsVisible>
+												<MultiBinding Converter="{x:Static BoolConverters.Or}">
+													<MultiBinding Converter="{x:Static BoolConverters.And}">
+														<Binding Path="Prompt"
+																 Converter="{x:Static StringConverters.IsNotNullOrEmpty}"/>
+														<Binding Path="NegativePrompt"
+																 Converter="{x:Static StringConverters.IsNotNullOrEmpty}"/>
+													</MultiBinding>
+													<Binding Path="ShouldDisplayPlaceholders"/>
+												</MultiBinding>
+											</Separator.IsVisible>
+										</Separator>
 										<HeaderedContentControl DockPanel.Dock="Top"
 																Margin="0 4">
 											<HeaderedContentControl.Header>
