--- a/SD_EXIF_Editor_v2/App.axaml
+++ b/SD_EXIF_Editor_v2/App.axaml
@@ -15,6 +15,7 @@
 			<c:PathBitmapConverter x:Key="PathBitmapConverter"/>
 			<c:ToUpperConverter x:Key="ToUpperConverter"/>
 			<c:ColorToColorWithTransparencyConverter x:Key="ColorToColorWithTransparencyConverter"/>
+			<c:KeyValuePairConverter x:Key="KeyValuePairConverter"/>
 		</ResourceDictionary>
 	</Application.Resources>
 
