--- a/SD_EXIF_Editor_v2/Views/ViewMetadataView.axaml
+++ b/SD_EXIF_Editor_v2/Views/ViewMetadataView.axaml
@@ -119,35 +119,9 @@
 												</MultiBinding>
 											</Separator.IsVisible>
 										</Separator>
-										<HeaderedContentControl DockPanel.Dock="Top"
-																Margin="0 4">
-											<HeaderedContentControl.Header>
-												<TextBlock Text="Other metadata"
-														   FontWeight="Bold"
-														   FontSize="18"/>
-											</HeaderedContentControl.Header>
-											<ItemsControl ItemsSource="{Binding MetadataProperties}"
-														  Grid.IsSharedSizeScope="True">
-												<ItemsControl.ItemTemplate>
-													<DataTemplate>
-														<Grid>
-															<Grid.ColumnDefinitions>
-																<ColumnDefinition Width="Auto"
-																				  SharedSizeGroup="a"/>
-																<ColumnDefinition Width="*"/>
-															</Grid.ColumnDefinitions>
-
-															<TextBlock Text="{Binding Key}"
-																		   Classes="Secondary"/>
-															<TextBlock Text="{Binding Value}"
-																	   Grid.Column="1"
-																	   HorizontalAlignment="Right"
-																	   TextWrapping="WrapWithOverflow"/>
-														</Grid>
-													</DataTemplate>
-												</ItemsControl.ItemTemplate>
-											</ItemsControl>
-										</HeaderedContentControl>
+										<c:OtherMetadataControl DockPanel.Dock="Top"
+																Margin="0 4"
+																MetadataProperties="{Binding MetadataProperties}"/>
 									</DockPanel>
 									<TextBlock Text="No image loaded"
 											   IsVisible="{Binding !IsFileLoaded}"
