Changed prompt truncation logics for the sake of built-in TextBlock.MaxLines property Contains questionable code but no visual flicker wass noticed

--- a/SD_EXIF_Editor_v2/Controls/PromptControl.axaml
+++ b/SD_EXIF_Editor_v2/Controls/PromptControl.axaml
@@ -35,9 +35,10 @@
 			</DockPanel>
 		</HeaderedContentControl.Header>
 		<StackPanel>
-			<TextBlock Text="{Binding TruncatedPrompt, ElementName=PromptCtrl}"
+			<TextBlock Text="{Binding Prompt, ElementName=PromptCtrl}"
 					   Name="PromptTextBlock"
 					   TextWrapping="Wrap"
+					   TextTrimming="CharacterEllipsis"
 					   IsVisible="{Binding !ShouldDisplayPlaceholder, ElementName=PromptCtrl}"
 					   Classes="Secondary"/>
 			<TextBlock Text="No prompt available"
