Changed TextTrimming to more appealing WordEllipsis Yet it is not shown frequently for some reason

--- a/SD_EXIF_Editor_v2/Controls/PromptControl.axaml
+++ b/SD_EXIF_Editor_v2/Controls/PromptControl.axaml
@@ -38,7 +38,7 @@
 			<TextBlock Text="{Binding Prompt, ElementName=PromptCtrl}"
 					   Name="PromptTextBlock"
 					   TextWrapping="Wrap"
-					   TextTrimming="CharacterEllipsis"
+					   TextTrimming="WordEllipsis"
 					   IsVisible="{Binding !ShouldDisplayPlaceholder, ElementName=PromptCtrl}"
 					   Classes="Secondary"/>
 			<TextBlock Text="No prompt available"
