Added TextTrimming for CivitItemView TextBlocks

--- a/SD_EXIF_Editor_v2/Views/CivitItemView.axaml
+++ b/SD_EXIF_Editor_v2/Views/CivitItemView.axaml
@@ -58,24 +58,28 @@
 			  RowDefinitions="Auto,Auto,Auto">
 			<TextBlock Text="{Binding OriginalName}"
 					   Classes="InteractiveText"
+					   TextTrimming="CharacterEllipsis"
 					   FontSize="16"
 					   IsVisible="{Binding !IsUnknown}"
 					   Grid.Column="0"
 					   Grid.Row="0"/>
 			<TextBlock Text="{Binding PromptName}"
 					   IsVisible="{Binding IsUnknown}"
+					   TextTrimming="CharacterEllipsis"
 					   FontSize="16"
 					   Grid.Column="0"
 					   Grid.Row="0"/>
 
 			<TextBlock Text="{Binding PromptName}"
 					   Classes="Tertiary"
+					   TextTrimming="CharacterEllipsis"
 					   FontSize="12"
 					   IsVisible="{Binding !IsUnknown}"
 					   Grid.Column="0"
 					   Grid.Row="1"/>
 			<TextBlock Text="{Binding OriginalVersion}"
 					   Classes="Tertiary"
+					   TextTrimming="CharacterEllipsis"
 					   FontSize="12"
 					   IsVisible="{Binding !IsUnknown}"
 					   Grid.Column="0"
