--- a/SD_EXIF_Editor_v2/App.axaml
+++ b/SD_EXIF_Editor_v2/App.axaml
@@ -16,6 +16,7 @@
 			<c:ToUpperConverter x:Key="ToUpperConverter"/>
 			<c:ColorToColorWithTransparencyConverter x:Key="ColorToColorWithTransparencyConverter"/>
 			<c:KeyValuePairConverter x:Key="KeyValuePairConverter"/>
+			<c:BoolToFloatConverter x:Key="BoolToFloatConverter"/>
 		</ResourceDictionary>
 	</Application.Resources>
 
