Implemented orientation detection and responsive layout Implemented ClipboardService

--- a/SD_EXIF_Editor_v2/App.axaml
+++ b/SD_EXIF_Editor_v2/App.axaml
@@ -17,6 +17,8 @@
 			<c:ColorToColorWithTransparencyConverter x:Key="ColorToColorWithTransparencyConverter"/>
 			<c:KeyValuePairConverter x:Key="KeyValuePairConverter"/>
 			<c:BoolToFloatConverter x:Key="BoolToFloatConverter"/>
+			<c:OrientationToGridIndexConverter x:Key="OrientationToGridIndexConverter"/>
+			<c:OrientationToGridSpanConverter x:Key="OrientationToGridSpanConverter"/>
 		</ResourceDictionary>
 	</Application.Resources>
 
