--- a/SD_EXIF_Editor_v2/Views/ViewMetadataView.axaml
+++ b/SD_EXIF_Editor_v2/Views/ViewMetadataView.axaml
@@ -20,12 +20,19 @@
 					   Theme="{StaticResource TitleTextBlock}"/>
 			<Separator DockPanel.Dock="Top"/>
 			<Grid ColumnDefinitions="1*,1*"
+				  RowDefinitions="2*,3*"
 				  Grid.Row="2">
 				<Image Grid.Column="0"
+					   Grid.Row="0"
+					   Grid.ColumnSpan="{Binding IsHorisontal, Converter={StaticResource OrientationToGridSpanConverter}}"
+					   Grid.RowSpan="{Binding !IsHorisontal, Converter={StaticResource OrientationToGridSpanConverter}}"
 					   IsVisible="{Binding IsFileLoaded}"
 					   Source="{Binding FileUri, Converter={StaticResource PathBitmapConverter}}"
 					   Stretch="Uniform"/>
 				<Border Grid.Column="0"
+						Grid.Row="0"
+						Grid.ColumnSpan="{Binding IsHorisontal, Converter={StaticResource OrientationToGridSpanConverter}}"
+					    Grid.RowSpan="{Binding !IsHorisontal, Converter={StaticResource OrientationToGridSpanConverter}}"
 						IsVisible="{Binding !IsFileLoaded}"
 						HorizontalAlignment="Center"
 						VerticalAlignment="Center">
@@ -38,7 +45,10 @@
 								   Margin="24"/>
 					</StackPanel>
 				</Border>
-				<ScrollViewer Grid.Column="1">
+				<ScrollViewer Grid.Column="{Binding IsHorisontal, Converter={StaticResource OrientationToGridIndexConverter}}"
+							  Grid.Row="{Binding !IsHorisontal, Converter={StaticResource OrientationToGridIndexConverter}}"
+							  Grid.ColumnSpan="2"
+							  Grid.RowSpan="2">
 					<Border Background="{StaticResource SemiColorBackground1}"
 							CornerRadius="12"
 							Padding="12">
