--- a/SD_EXIF_Editor_v2/Views/CivitItemView.axaml
+++ b/SD_EXIF_Editor_v2/Views/CivitItemView.axaml
@@ -54,7 +54,7 @@
 	</UserControl.Resources>
 	
 	<Border>
-		<Grid ColumnDefinitions="3*,1*"
+		<Grid ColumnDefinitions="*,Auto"
 			  RowDefinitions="Auto,Auto,Auto">
 			<TextBlock Text="{Binding OriginalName}"
 					   Classes="InteractiveText"
